// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelsList List should match snapshot 1`] = `
<View
  onLayout={[Function]}
>
  <SectionList
    contentContainerStyle={
      {
        "paddingBottom": 44,
      }
    }
    keyExtractor={[Function]}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="always"
    maxToRenderPerBatch={10}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    sections={[]}
    stickySectionHeadersEnabled={true}
    testID="main.sidebar.channels_list.list"
    viewabilityConfig={
      {
        "itemVisiblePercentThreshold": 100,
        "waitForInteraction": true,
      }
    }
  />
</View>
`;

exports[`ChannelsList List should match snapshot with collapsed threads enabled 1`] = `
<View
  onLayout={[Function]}
>
  <Connect(ThreadsEntry) />
  <SectionList
    contentContainerStyle={
      {
        "paddingBottom": 44,
      }
    }
    keyExtractor={[Function]}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="always"
    maxToRenderPerBatch={10}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    sections={[]}
    stickySectionHeadersEnabled={true}
    testID="main.sidebar.channels_list.list"
    viewabilityConfig={
      {
        "itemVisiblePercentThreshold": 100,
        "waitForInteraction": true,
      }
    }
  />
  <UnreadIndicatorIOS
    onPress={[Function]}
    style={
      [
        undefined,
        {
          "marginTop": 64,
        },
      ]
    }
    theme={
      {
        "awayIndicator": "#ffbc1f",
        "buttonBg": "#1c58d9",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3f4350",
        "codeTheme": "github",
        "dndIndicator": "#d24b4e",
        "errorTextColor": "#d24b4e",
        "linkColor": "#386fe5",
        "mentionBg": "#ffffff",
        "mentionColor": "#1e325c",
        "mentionHighlightBg": "#ffd470",
        "mentionHighlightLink": "#1b1d22",
        "newMessageSeparator": "#cc8f00",
        "onlineIndicator": "#3db887",
        "sidebarBg": "#1e325c",
        "sidebarHeaderBg": "#192a4d",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarTeamBarBg": "#14213e",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#5d89ea",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#28427b",
        "sidebarUnreadText": "#ffffff",
        "type": "Denim",
      }
    }
    visible={false}
  />
</View>
`;

exports[`ChannelsList List should match snapshot with unreads not on top 1`] = `
<View
  onLayout={[Function]}
>
  <SectionList
    contentContainerStyle={
      {
        "paddingBottom": 44,
      }
    }
    keyExtractor={[Function]}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="always"
    maxToRenderPerBatch={10}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    sections={[]}
    stickySectionHeadersEnabled={true}
    testID="main.sidebar.channels_list.list"
    viewabilityConfig={
      {
        "itemVisiblePercentThreshold": 100,
        "waitForInteraction": true,
      }
    }
  />
  <UnreadIndicatorIOS
    onPress={[Function]}
    style={
      [
        undefined,
      ]
    }
    theme={
      {
        "awayIndicator": "#ffbc1f",
        "buttonBg": "#1c58d9",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3f4350",
        "codeTheme": "github",
        "dndIndicator": "#d24b4e",
        "errorTextColor": "#d24b4e",
        "linkColor": "#386fe5",
        "mentionBg": "#ffffff",
        "mentionColor": "#1e325c",
        "mentionHighlightBg": "#ffd470",
        "mentionHighlightLink": "#1b1d22",
        "newMessageSeparator": "#cc8f00",
        "onlineIndicator": "#3db887",
        "sidebarBg": "#1e325c",
        "sidebarHeaderBg": "#192a4d",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarTeamBarBg": "#14213e",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#5d89ea",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#28427b",
        "sidebarUnreadText": "#ffffff",
        "type": "Denim",
      }
    }
    visible={false}
  />
</View>
`;
